重新规划项目

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="js/GeHuaShuMeiLib.js" type="application/javascript"></script>
+    <script src="app/ad1ca210d548abce44290afcc634a0d9.js" type="application/javascript"></script>
 </head>
 <body>
 
