重新修订结构，并定义联动参数

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="app/ad1ca210d548abce44290afcc634a0d9.js" type="application/javascript"></script>
+    <script src="GHSMLib-1.0.0.js" type="application/javascript"></script>
+    <script>
+        GHSMLib.addActions({
+            goTo: function (props) {
+            }
+        });
+        GHSMLib.addActions();
+
+    </script>
 </head>
 <body>
 
