--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="GHSMLib-1.0.0.js" type="application/javascript"></script>
+    <script id="GHSMLib" src="GHSMLib-1.0.0.js" key="f704916f62ea87b11c11ad0bfeadb25f"
+            type="application/javascript"></script>
 </head>
 <body>
 <img id="qrCode" src=""/>
 <script>
     GHSMLib.addActions({
-        goTo: function (props) {
+        goTo: function (props, user) {
+            console.log(props);
+            console.log(user);
         }
     });
 
