更新压缩版及修改bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script id="GHSMLib" src="GHSMLib-1.0.0.js" key="f704916f62ea87b11c11ad0bfeadb25f"
+    <script id="GHSMLib" src="GHSMLib-1.0.0.min.js" key="f704916f62ea87b11c11ad0bfeadb25f"
             type="application/javascript"></script>
 </head>
 <body>
