--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 </ul>
 <script>
 
-    var CyberCloud = {
-        GetParam: function () {
-            return {
-                ParamValue: "1371876159"
+        var CyberCloud = {
+            GetParam: function () {
+                return {
+                    ParamValue: "1371876155"
+                }
             }
         }
-    }
 </script>
 <script src="lib/jquery-2.1.3.min.js"></script>
 <script id="GHSMLib" src="GHSMLib-1.0.0.js" key="f704916f62ea87b11c11ad0bfeadb25f"
@@ -70,12 +70,15 @@
     var au = new GHSMLib.AudioPlayer(list, 2);
 
 
-    var ui = new GHSMLib.getUserInfo(function (data, err) {
-        console.log(data);
-        if (typeof err !== "undefined")
+    GHSMLib.getUserInfo(function (data, err) {
+        if (typeof err !== "undefined") {
             console.log(err);
+        } else {
+            console.log(data);
+        }
+
     });
-    console.log(ui);
+
 </script>
 </body>
 </html>
