--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     }
 </script>
 <script src="lib/jquery-2.1.3.min.js"></script>
-<script id="GHSMLib" src="GHSMLib-1.0.0.js" key="3de3ec9f0b380ff00d08c9e78c98ad9b"
-        type="application/javascript"></script>
+<script id="GHSMLib" src="GHSMLib.js" key="3de3ec9f0b380ff00d08c9e78c98ad9b"
+        type="application/javascript" tools="webSocket"></script>
 
 <script>
     console.log(GHSMLib.cardId);
