--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </script>
 <script src="lib/jquery-2.1.3.min.js"></script>
 <script id="GHSMLib" src="GHSMLib.js" key="3de3ec9f0b380ff00d08c9e78c98ad9b"
-        type="application/javascript" tools="webSocket"></script>
+        type="application/javascript"></script>
 
 <script>
     console.log(GHSMLib.cardId);
