--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         }
     }
 </script>
-<script src="lib/jquery-2.1.3.min.js"></script>
 <script id="GHSMLib" src="GHSMLib.js" key="3de3ec9f0b380ff00d08c9e78c98ad9b"
-        type="application/javascript"></script>
+        type="application/javascript" lib="TXmap,jQuery"></script>
 
 <script>
     console.log(GHSMLib.cardId);
