--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 ParamValue: "1371053255"
             }
         }
+    };
+
+    GHSMLibOnLoad = function () {
+        console.log("finish")
     }
 </script>
 <script id="GHSMLib" src="GHSMLib.js" key="3de3ec9f0b380ff00d08c9e78c98ad9b"
