--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     var CyberCloud = {
         GetParam: function () {
             return {
-                ParamValue: "1371053255"
+                ParamValue: "1372322291"
             }
         }
     };
-
+</script>
+<script>
     GHSMLibOnLoad = function () {
         console.log("finish")
     }
@@ -44,7 +45,6 @@
 
     var qc = GHSMLib.utils.qrCode("https://www.baidu.com", 500);
     document.getElementById("qrCode").src = qc;
-
 
     GHSMLib.keyCon.listKeyListener({
         id: "aaa",
