--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <li>5</li>
 </ul>
 <script>
-
+    //1372341229
+    //1372322291
     var CyberCloud = {
         GetParam: function () {
             return {
@@ -34,6 +35,9 @@
 </script>
 <script id="GHSMLib" src="GHSMLib.js" key="3de3ec9f0b380ff00d08c9e78c98ad9b"
         type="application/javascript" lib="TXmap,jQuery"></script>
+
+<!--<script id="GHSMLib" src="http://172.16.188.26/web/GHSMLib/GHSMLib.js" key="3de3ec9f0b380ff00d08c9e78c98ad9b"
+        type="application/javascript" lib="TXmap,jQuery"></script>-->
 
 <script>
     console.log(GHSMLib.cardId);
